# minigst

./: .gitignore
.github/workflows/: coverage_python.yml  nonreg-TP_python_dev_ubuntu-latest.yml  nonreg-TP_python_ubuntu-latest.yml  nonreg-TP_r_dev_ubuntu-latest.yml  nonreg-TP_r_ubuntu-latest.yml  publish_python.yml  publish_r.yml
R/: DESCRIPTION  README.md
R/R/: Db.R  kriging.R  plot.R  vario.R
R/TP/: 01_gstlearn_start.Rmd  02_Db.Rmd  02_vario_gstlearn_with_solution.Rmd  03_kriging_gstlearn_with_solution.Rmd  04_NonStationary_with_solution.Rmd  05_simu_gstlearn_with_solution.Rmd
R/man/: createModel.Rd  dbplot_grid.Rd  dbplot_point.Rd  dot-checkStructNames.Rd  minikriging.Rd  model_covMat.Rd  plot_scatter.Rd  vario_cloud.Rd  vario_exp.Rd
R/run/: build_rmd_html.sh
python/: .gitignore  README.md  pyproject.toml
python/Tutorials/: 01_gstlearn_start.ipynb  02_Db.ipynb  02_Variography_solutions.ipynb  03_Kriging_solutions.ipynb  04_Universal_Kriging.ipynb
python/run/: build_ipynb_html.sh  run_test_ipynb.py
python/src/minigst/: __init__.py  db.py  gaussim.py  kriging.py  loadData.py  model.py  plot.py  vario.py
python/src/minigst/datafiles/Meuse/: README.md
