[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "minigst"
version = "0.1.0"
description = "Wrapper package for gstlearn - Python version"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    {name = "Emilie Chautru", email = "emilie.chautru@minesparis.psl.eu"},
    {name = "Mike Pereira", email = "mike.pereira@minesparis.psl.eu"},
    {name = "Thomas Romary", email = "thomas.romary@minesparis.psl.eu"}
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
dependencies = [
    "gstlearn[conv,plot]==1.9.0",
]

[project.urls]
Homepage = "https://github.com/gstlearn/minigst"


[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
minigst = ["datafiles/**/*"]
